# grocery_list_app

./: .env  README.md  docker-compose.yml  launch.sh  main_app.py  pyproject.toml
